[tool.poetry]
name = "roam2agora"
version = "0.1.0"
description = ""
authors = ["Nik V <github@nikvdp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
